# safe-del

./: .gitignore  README.md  pyproject.toml
src/safe_del/: __init__.py  api.py  arguments.py  cli.py  install_cli.py  models.py  resolver.py  service.py  validator.py
src/safe_del.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
